@@ -248,6 +248,7 @@ key ctrl+space;anchorSelection
 key ctrl+c;copySelection
 key ctrl+x;cutSelection
 key alt+u;removeSelection
+key ctrl+b   select_block
 key ctrl+alt+v;showClips
 key ctrl+v;paste
 key ctrl+y;unundo
